crd alignment fixed

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -52,7 +52,7 @@ html,body {
 
     section {
         @include set-bg-color(rgb(43, 226, 141));
-        #coin1,#coin2,#coin3,#coin4,#coin5,#coin6,#coin7,#coin8,#coin9,#coin10 {
+        .coin {
             height: 4vh;
             width: 2vw;
             margin-right: $margin10;
